pins/3.4.1/harness/RESEARCH_AGENTS.md
# Mode A — Research Harness Spec (v3)

**This file is the full normative law for equity research (Mode A).**  
Root `AGENTS.md` is only a dual-mode **router** — agents must load **this file** before Phase 0.  
Subagent templates: `harness/agent_prompts.md`. One-page map: `harness/HARNESS_MAP.md`.  
Product eng (Mode B): `eng/AGENTS.md` — do not mix with research phases.

**Product purpose:** better **investment decisions** via decision-grade fair value, risks, timing, and provenance — not token thrift. Optimize **agent → next-phase** value transfer (usable artifacts, no lost risks, no invented numbers).

**Data plane:** write new sessions under `archive/research/<TICKER>/<SESSION_KEY>/`. Never overwrite completed sessions. Catalog/outcomes are projections.

### Quick map (read this first)

| Need | Where |
|------|--------|
| One-page pipeline + “if X missing don’t start Y” | `harness/HARNESS_MAP.md` |
| Subagent prompts | `harness/agent_prompts.md` |
| Phase preflight (evidence before valuation/reports) | `scripts/preflight_phase.py` |
| Structural session check | `scripts/check_session.py --full` |
| Schemas | `harness/schemas/*.schema.json` |
| Sector / region methodology (advisory) | `harness/modules/sector_*.md`, `harness/modules/region_*.md` |
| Filing deep-dive method | `harness/filing_deep_dive.md` |
| Judgment exemplars | `harness/exemplars/` |
| Industry research notes | `harness/research/` |
| Ticker document library | `harness/library.md` (bind/ingest; inject orch + 2b only) |

**Orchestrator order (new sessions):** **verify ticker** (`scripts/verify_ticker.py`) → scaffold → stamp `quote_symbol` + `verify_listing.py` → `bind_library.py` → classify KPI sector + market_context (Item 1 from bound annual if present) → write `registry/classification.json` (engine from `valuation_router.md`) → write `registry/research_brief.json` → Phase 0 ∥ 1_parallel → **preflight** before 1b / 1c / 1d / 1e / 2 / 2.5 / 4 / 5 → 1e story then 3P critic (lock) → Agent 5 compute → audit → finalize (copies scaffold stamps; does not recapture live VERSION/git). Bind must finish before 2b. Checklist: `harness/orchestrator_runbook.md` (includes `data/price_snapshot.json` freeze before Phase 2). Library law: `harness/library.md`. Historical Street/destock bands: `harness/law_history.md` (Agent 13 only when `harness_version < 3.0.1`). Agent 5 self-lock of `narrative_bind` is history on `< 3.4.0`.

Also: `harness/region_integration.md`, `scripts/` helpers, `_archive/` (retired v1 — never follow).

## 1. Design principles

1. **LLM judges, code computes.** Sector classification, valuation model choice, discount rates, growth/margin paths, multiples, bear/base/bull probabilities, and stress **dials** (which shock, replacement values, standalone chance) are agent decisions with reasoning. The harness contains **no hardcoded valuation probabilities or multiples** and **no pasted WACC/ERP tables**. Stress **haircuts** and the duration-book **size cap** are derived by code: `fair_value_under` and `compute_stress_bind` (one expected-loss schedule). Policy: §10f. Reports copy `format_stress_card`; they do not re-judge size.
2. **Every judgment number is justified.** Any number an agent decides (rather than reads from a source) must be recorded with a `rationale` (why this value) and a `basis`/`source` (what it rests on). This is the **justification contract** (§6) and it is enforced structurally and by the audit agent.
3. **Runtime compute scripts.** Math is done by small ad-hoc Python scripts the agent writes into `data/compute/` for that specific company, runs, and cites. Never do multi-step arithmetic in prose. Each company gets the model that fits it.
4. **Light schemas + LLM audit.** Schemas (`harness/schemas/`) enforce structure and provenance only — they do not attempt to validate financial truth. A Phase 5 audit agent cross-checks reports against registry data.
5. **English only** for normative text (spec, prompts, schemas, registry keys, reports).
6. **Decision-grade handoffs.** Each phase’s primary product is on-disk evidence the next specialist can use; handoffs state gaps that must widen uncertainty. Swarm returns are signal-dense and sourced — not raw filing dumps and not hollow schema-valid shells.

## 2. Session folder convention

Research sessions are **archived records** under `archive/research/` (not at the repo root). Layout plan: `harness/plan_research_archive_layout.md`.

```text
archive/
├── catalog/                 # runs_index.json, tickers_index.json (rebuildable)
├── outcomes/                # optional later: realized marks + scorecards (never edit research)
├── library/<TICKER>/        # reusable primary documents (filings, transcripts); see harness/library.md
└── research/
    └── <TICKER>/<YYYY-MM-DD>/   # one folder per research session, never overwritten
        ├── reports/   00_<TICKER>_README.md, 01_<TICKER>_fundamental.md, 02_<TICKER>_technical.md
        ├── data/      raw + processed data; valuation_model.json; compute/; raw_sec/; transcripts/
        ├── charts/    PNGs with descriptive names
        ├── registry/  sector_config, market_context, research_brief, background, sec_filings,
        │              filing_deep_dive, news_sentiment, latest_quarter, technical, tsr_validation,
        │              risk_bridge, audit, data_fetch_log, phase_status  (all .json);
        │              raw/; handoffs/  (see §8)
        └── meta/      run_manifest.json; prediction_snapshot.json  (frozen claims for lookback)
```

Rules:

1. Ticker uppercase. Date from the `date` command (never let an agent compute it).
2. **Ticker check:** before scaffolding, `python3 scripts/verify_ticker.py --ticker <T>` (`scaffold_session.py` existence-checks then writes). Live Yahoo quote **or** Yahoo search listings → ok; session ticker is typed; `quote_symbol` stays **null**. No quote and no search listings → **abort** — do not scaffold, do not invent a company. After scaffold, the orchestrator **confirms the Yahoo listing with tools**, stamps `quote_symbol`, then `python3 scripts/verify_listing.py --ticker T --date <session_key>`. Non-zero → abandon and STOP before classification / Phase 0. `--skip-ticker-check` is tests/offline only. Price consumers **read the stamp** (no ticker fallback).
3. Scaffold with: `python3 scripts/scaffold_session.py --ticker <T> --date <D> --orchestrator-model <id>` — creates `archive/research/<T>/<SESSION_KEY>/`.  
   - **`session_date`** = as-of `YYYY-MM-DD` (economics / price freeze).  
   - **`session_key`** = unique folder: plain `YYYY-MM-DD` for the first run that day, then auto **`YYYY-MM-DD__r2`**, `__r3`, … if that folder is taken; or explicit `--slug`.  
   - **`--orchestrator-model` is required** (e.g. `grok-4.5`; or env `RESEARCH_ORCHESTRATOR_MODEL`). Stamped into `meta/run_manifest.json` at scaffold — **never invent or “remember” the model id after a long context**. Optional `--subagent-model` (defaults to orchestrator). Preflight / `check_session` FAIL if missing on active runs.  
   - Refuses to overwrite a non-empty folder (use a free key or `--force` only for broken scaffolds).
4. Re-research → **new `session_key`** (new date and/or `__rN` / slug). **Never rewrite** a completed session to “fix” history.
5. **Cross-session isolation (default for a NEW research run):**  
   - **Within the current session** agents share freely via `S/registry`, handoffs, and `S/data`.  
   - **Prior sessions** (other `session_key`s — yesterday, last week, earlier today) are **out of scope** unless the user explicitly says **resume** that folder or **compare after** this run.  
   - **Do not** open, list, or “check whether yesterday’s SOFI/META/… run is complete and usable” before scaffolding a new run. That is contamination and waste. Scaffold today’s `S`, then work only under `S`.  
   - Prior sessions must **not** supply FV, MoS, scenario probabilities, WACC, thesis text, or handoffs as inputs to any phase (not only Agent 5).  
   - Optional compare to a prior run is **post-audit / post-finalize only**, and only if the user asked. Policy: `registry/session_isolation.json` (scaffolded).  
   - **Document library:** `archive/library/<TICKER>/` is reusable **source documents**, not prior research. After listing stamp, orchestrator runs `bind_library.py` **before** `sector_config` (copies the **required set** into `S`). If a latest annual `.txt` is in `S/data/raw_sec/`, line-range Item 1 / business before locking `primary_sector`. If bind is empty, classify as today and say so in `sector_config.signals`. Bind must still finish before Agent 2b. Agents other than 2b unlabeled must **not** open the live library. Do **not** harvest other sessions from Mode A. Canonical rules: `harness/library.md`.  
6. After Phase 5 (audit): run `python3 scripts/finalize_session.py --ticker <T> --date <D_or_session_key>` (snapshot + compare SQLite + thin catalog). Finalize **copies** scaffold-time `harness_version` + `harness_git_sha` (+ dirty flag) into `meta/run_manifest.json` and `prediction_snapshot.provenance` — never leave these null, and do **not** recapture from live `harness/VERSION` / git. It **preserves** scaffold-time `orchestrator_model` / `default_subagent_model` into the compare DB (does not invent them). Use full `session_key` when the folder is `date__rN`.
7. Path resolution (`packages/kd_research/paths.py`): sessions live only under `archive/research/<TICKER>/<SESSION_KEY>/`. **New-run orientation does not include browsing other session folders.**
8. Repo root holds harness code only (`harness/`, `scripts/`, `packages/`, `apps/`, MCP packages) — not ticker session trees. Mode A schemas are `harness/schemas/`; sector/region modules are `harness/modules/`.

## 3. Required inputs

Confirm or infer before starting: ticker, company name, market region/exchange, reporting currency, regional benchmark index, 3–5 closest peers, latest fiscal quarter/filing date. Also establish **market/region context** (§5b): accounting basis, ownership/control hints, cost-of-capital flags, and `intensity`. Document inferences in `00_<TICKER>_README.md` and write `registry/market_context.json`.

**Investment research brief (new sessions):** after bind + sector_config + market_context and **before Phase 0**, write `registry/research_brief.json` per `harness/schemas/research_brief.schema.json`: investment objective, `must_answer_questions`, peers, benchmarks, currency, `research_depth` (`standard`|`deep`) with rationale. Phase 0 maps findings to those questions; open questions feed valuation range width and/or Phase 2.5. Legacy sessions without a brief are OK (checks SKIPPED).

## 4. Data sources

| Layer | Tool | Use for |
|---|---|---|
| Ticker library | `bind_library.py` + `doc_text.py` (orchestrator / 2b). Agents read **session** copies | Required-set `.txt` in `S/data/raw_sec/` and `S/data/transcripts/`. Fetch only `session_missing[]`. Who-table: `harness/library.md`. |
| Primary fundamentals & SEC | `kimi-datasource` plugin (`sp_data`, `sec_edgar`, `yahoo_finance` sources) | Financial statements, estimates, **session_missing** filings |
| Local MCPs | `yfinance`, `sec-edgar`, `web-fetch` (wired in `.mcp.json`) | Prices/technicals, filing text fallback, page fetches |
| Web | WebSearch / FetchURL | News, sentiment, **new** earnings-call transcripts (secondary to filings), investor materials |

Fallback rule: if a primary source is unavailable or errors, state the failure in the registry file, use the fallback source, and note the substitution. Never silently proceed on partial data — degraded data must widen the valuation range (§12). Transcripts are **secondary** for management-promise tracking: if none can be obtained, record `sources.transcripts` as missing/empty, set scorecard `data_quality` degraded, and widen uncertainty — never invent quotes.

## 5. Sector classification (KPI identity, not the engine)

Run **once**, by the main agent, after library bind and **before** `classification.json`. There is **no scoring algorithm** — classify by reasoning over objective inputs. **Sector modules do not classify** and **do not choose the DCF engine.** Engine and playbook live in §5c / `registry/classification.json`. Any “Automatic Detection Logic,” scoring matrix, or “classified if ANY of” list in `sector_*.md` is a diagnostic hint **after** this judgment. If a module hint contradicts this section, **this section wins on KPI identity**; the router wins on engine.

1. Pull objective inputs: yfinance sector/industry, business description, revenue mix (latest 10-K), and which sector KPIs exist (NIM/CET1? FFO/AFFO? combined ratio? ARR/NRR? rate base? commodity exposure?).
2. Judge the primary sector: `banking | insurance | growth | reit | utility | cyclical | standard`. Meanings (heuristics, not a scorecard):
   - **banking** — loans/deposits/NII/regulatory capital are the identity.
   - **insurance** — underwriting, float, combined ratio / embedded value.
   - **reit** — FFO/NAV, property or mortgage pass-through.
   - **utility** — regulated rate base / allowed earnings.
   - **growth** — lead model is path-to-profit / SBC-dilution because that **is** the identity (typically negative-FCF tech/biotech). Profitable branded consumer names are usually `standard` with optional `is_also_growth`.
   - **cyclical** — **the cycle is the investment thesis** (mean-reverting earnings; peak multiples can be expensive). Judgment inputs (not a formula): a named cyclical sub-type or cousin (metals, E&P, steel, chemicals, fertilizers, shipping, semis, machinery, autos, airlines, unbranded posted-price protein/ag, cruise≈airlines/shipping, tires≈auto parts) **or** a majority of revenue **realized at** commodity spot / index / posted producer prices (`revenue ≈ volume × commodity price`).
   - **standard** — residual ordinary DCF. **Includes branded CPG / consumer staples / farm-products brands** whose household demand is not a GDP cycle.
3. **Demand staple vs supply shock stay split.** Households still buy eggs, coffee, chocolate, packaged meat in recessions → primary **standard** on the merits (not via the confidence fallback). HPAI, flock rebuild, oversupply, farm-gate feed, competitor price-gaps → Phase 2.5 / `research_brief.must_cover_risks`. That overlay does **not** switch the lead module to `sector_cyclical.md`.
4. Illustrative (no ticker exceptions): branded retail carton / list-promo eggs → `standard` + shock overlay; unbranded posted-price shell eggs → `cyclical`; cruise capacity / berth-days ≈ airlines/shipping → `cyclical` (a defensive GICS label is not “never cyclical”).
5. Classify from these meanings **first**. If you consult a module detection list, treat it as hints. If considering `cyclical` and no sub-type **or cousin** fits and revenue is not majority spot-realized, that is a strong veto. Then set `module_file` (`""` is valid for `standard`).
6. Write `registry/sector_config.json` per `harness/schemas/sector_config.schema.json`: `primary_sector`, self-assessed `confidence`, `signals` (the evidence), `rationale` (why this sector, why this confidence), `is_also_growth`, `module_file`, plus `runner_up` (second-best hypothesis + why rejected) and `disconfirming_signals` (evidence against the choice that was weighed). For genuinely borderline cases, run two independent classification passes and reconcile.
7. Confidence < 0.70 → set `requires_manual_review: true`, say so in the README, and **widen** range or `duration.action=too_hard`. Do **not** auto-fallback to ordinary DCF / `primary_sector=standard`. Uncertain identity may keep the judged sector or run two-model (`multi_method_reconciliation`) — Agent 5 does not reclassify. That fallback is for **uncertain** names, not for branded staples (those are `standard` on the merits).
8. If `is_also_growth`: primary sector's model still leads; add growth-module SBC/dilution analysis at critical intensity; extend the explicit forecast to 7–10 years.
9. Material commodity-input or protein-supply beta on a `standard` name **must** appear in `research_brief.must_cover_risks` / `must_answer_questions` so Agent 5 does not freeze a peak-year margin as mid-cycle.

## 5b. Market / region classification (agent judgment)

Run **once**, by the main agent, with sector classification (before Phase 0). There is **no scoring algorithm** and **no hardcoded** regional WACC, country ERP tables, or family-control discounts.

1. Pull objective inputs: exchange / listing venue(s), reporting currency, filing form type (10-K vs 20-F / HKEX / DART / other), yfinance country, quick ownership signals (widely held, dual-class, family, SOE, VIE headlines), and whether cash flows are multi-currency.
2. Judge `primary_region`: `us | hk_china | korea | japan | eu_uk | other` and `intensity`: `low | medium | high`.
3. Write `registry/market_context.json` per `harness/schemas/market_context.schema.json`: `primary_region`, `intensity`, self-assessed `confidence`, `signals`, `rationale`, `module_file` (`region_us.md` | `region_hk_china.md` | `region_generic.md` or a future dedicated module), `listing`, `accounting_regime`, `cost_of_capital_flags` (**flags only** — judged Rf/ERP/FX numbers belong in valuation assumptions), `ownership`, `requires_manual_review`, plus `runner_up` / `disconfirming_signals` when useful.
4. **Intensity gate (load-bearing):**
   - **low** — typical US widely-held, US GAAP, USD model: downstream may no-op with a single valuation `market_context_hooks` entry `noted_only`; do not invent country haircuts or mandatory regional stress.
   - **medium** — local rates/accounting/FX need explicit treatment; 2e ownership status enriched; regional stress expected when material.
   - **high** — family/SOE/VIE/pyramid/control, dual-list institutional risk, capital controls, or thin non-US disclosure: deep 2e ownership/related-party work; valuation must address local CoC + governance dials with hooks; Phase 2.5 includes ≥1 region/governance/FX scenario; widen range when data quality is degraded.
5. Confidence < 0.70 → set `requires_manual_review: true`, widen valuation range, and say so in the README — do **not** fake `primary_region=us` to avoid work.
6. Read the advisory module in `module_file` before valuation (same rule as sector modules: numbers are reference ranges, not mandates). Decision record: `harness/region_integration.md`.
7. **No always-on region agent** and **no Agent 2f** in the default graph. Ownership depth stays with Agent 2e; cost-of-capital judgment stays with Agent 5. A gated 2f may be considered later only if audits show systematic high-intensity misses.

## 5c. Engine classification (orchestrator, before Phase 0)

Harness ≥ 3.4.0. After `sector_config` + `market_context`, walk `harness/modules/valuation_router.md` (open the named `ref/` recipe). Write `registry/classification.json`: `job`, `life_cycle_stage`, `who_leads`, `stage_rationale`, one `iv_playbook`, `overlays`, `buyer`, `market_contest`, `claim`, `engine_rationale`.

- Sector/GICS is not the engine. `primary_sector=growth` does not pick `young_startup`. Cyclical is an overlay on a host playbook.
- A distressed bank is still `financial_service`. Hard fail if `primary_sector` is banking/insurance/reit and `iv_playbook` disagrees.
- Agent 5 **must not** reclassify. `classification.json` is the only identity on ≥ 3.4.0. `narrative_bind` does not copy playbook/stage/buyer/contest.
- `< 3.4.0`: Agent 5 still classified inside the valuation spawn (`harness/law_history.md`).

## 6. The justification contract

Applies to every agent, every artifact:

- Any **decided** number (probability, WACC, growth rate, margin path, multiple, haircut, weight, entry/stop level, sizing) → `{value, rationale, basis}` in the registry JSON. `rationale` ≥ 1 real sentence; `basis` = data/source/reasoning it rests on.
- Any **sourced** number → cite the source (filing URL, tool, dataset).
- Reports must restate the key judgment numbers with their rationale — a reader must be able to see *why* without opening the JSON.
- Sector modules' numeric ranges are **advisory** (§9): deviating is allowed with rationale; copying a range default without thinking is not.
- `scripts/check_session.py` enforces non-empty `rationale` fields structurally; the Phase 5 audit agent enforces that rationales are substantive.

## 7. Runtime compute scripts

- Location: `SESSION_ROOT/data/compute/<descriptive_name>.py`. One script per model/task (e.g. `excess_return_jpm.py`, `technical_indicators.py`, `tsr_dilution.py`).
- The script reads inputs from the session's data/registry files (or embeds fetched values as constants with a comment citing their source), prints/writes a JSON result, and the agent records `compute_script` in the output artifact.
- Use the environment's `python3`. Use only installed libraries (check first; `vendor/mcp/yfinance-market-mcp/.venv` has yfinance/matplotlib/pandas).
- The script is part of the deliverable: it must be reproducible — rerunning it reproduces the artifact's numbers.
- **Hermetic rule**: fetched market/fundamental data must be snapshotted into `data/*.csv` at session time; scripts read the cached files and fetch live data only when the cache is absent. A rerun next month must produce the same numbers. Any rerun difference is data drift — investigate, never wave off as float noise.
- **Scripted intermediates**: any number used inside an assumption build-up (realized beta, historical CAGR, ERP inputs) must come from a script in `data/compute/`, never unscripted mental math.

## 8. Workflow

Subagent prompt templates for every phase are in `harness/agent_prompts.md`. Track phases with `TodoList` **and** `registry/phase_status.json` (durable resume map). Each subagent prompt must state its exact input paths, output paths, and the justification contract — subagents see only their prompt.

### Phase status resume map (orchestrator-only)

`scaffold_session.py` writes `registry/phase_status.json` (all phases/agents `pending`). **Only the orchestrator writes this file.** Subagents write artifacts + handoffs; the orchestrator flips status after each return.

**MUST:**

1. Own `registry/phase_status.json` as the **sole resume map** for the session.
2. After each agent finishes: update that agent row (`status`, `artifacts[]`, `handoff` path), then re-check the phase completeness gate before advancing.
3. On re-entry: read `phase_status.json` and `resume_hint` first; set `current_phase` to the first phase that is not `complete`/`skipped`; **do not re-run agents already `complete`** unless fixing an audit FAIL (then reset that agent to `pending` with a note). **5b (after Phase 2.5, orchestrator lead):** edit `registry/decision.json` only. Do not rewrite FV/WACC/MoS. Do not rewrite `risk_bridge.json`. Do not reset `2_parallel` / Agent 5 to pending. Do not spawn subagent `5` in `2_5`. Do not retag Agent 5 `execution` (stays `subagent`). Read `risk_bridge.json` and `tsr_validation.json` if present. Set `reopened_after_stress: true`. If TSR exists, `tsr_seen: true`. Apply already ran on the 2.5 merge path. Print the book with `python -m packages.kd_research.stress_apply --ticker T --date D --skip-apply --bind-print` (`compute_stress_bind`) and write that `stress_bind` object: `{material, binding_scenario, haircut_pct, probability, stressed_fv, expected_loss_pct, size_cap}`. **Book vs map:** map is Agent 5 unstressed base FV; book is this object. Bind reads applied `stressed_fv` only (missing FV is an error, not a guessed haircut). `expected_loss_pct` = p × (1 − stressed_fv/base) of the binding independent scenario (max EL among numeric `restates_bear=false`; do not sum overlapping movies). `size_cap` from the one EL schedule in `decision.py` (4%/8%/12% → 1.00/0.50/0.25/0.00). `material` is derived (`size_cap < 1`). Numeric `restates_bear` (`|stressed_fv − bear|/base < 0.05`) cannot bind; a worker flag cannot hide an independent path. Liquidity `survival_12m=false` on **any** scenario (including restates-bear) forces `size_cap=0`. If `size_cap=0`: `duration.action` ∈ pass|too_hard|sell|short. Sized initiate/add/hold/trim are legal when `size_cap > 0`. No override hatch. No DCF rewrite. If TSR `roc_vs_cost_of_capital=fail` and valuation `cheap_claim=franchise_mos` with `quality_bucket=above_wacc`, write `decision.roc_screen_rebuttal` ≥40 chars. Optional handoff `registry/handoffs/5b_decision_reopen.md`. Machine gate: `check_catalog` at `4_parallel` / `--full`. Policy: §10f.
4. Never set `phase.status = complete` if a required artifact path is missing on disk or a required handoff is missing/stub. For Phase 0 and 2.5, also pass merge/coverage preflight: `python3 scripts/preflight_phase.py --ticker T --date D --phase 0|2_5 --mode complete`.
5. Keep `resume_hint` as one plain-English sentence for the next shift; set `updated_at` from the `date` command (UTC ISO-8601).
6. Before starting Phase `2_parallel`, `2_5`, `4_parallel`, or `5`, run entry preflight: `python3 scripts/preflight_phase.py --ticker T --date D --phase <id>`. FAIL → fix upstream; do not invent evidence.
7. **Spawn-or-abandon:** every specialist on the phase graph (each 1c year-reader; 1e `story` then `3p`; each Phase 0 / 2.5 raw) **must** be launched with `spawn_subagent`. Record `python3 scripts/record_spawn.py --ticker T --date D --subagent <id> --phase <phase> --event launch` then `--event return` (return without launch FAILs). Retry spawn without recording fail if the tool glitched. `--event fail --reason …` only when you cannot launch and would otherwise work inline (writes `registry/abandon.json`) — then **stop**. Do **not** write that specialist’s artifacts as the lead. Inline specialist work is a machine FAIL, not a fallback. Agent 5 `execution` stays `subagent` after 5b. Orchestrator-lead work remains: listing stamp, `bind_library.py`, sector/market/`classification.json`/brief, `price_snapshot`, `phase_status`, Phase 0 / 2.5 **merge**, `stress_apply`, Agent 5 **5b** reopen.

Statuses: `pending | in_progress | complete | failed | blocked | skipped`. Live DAG, entry files, and display live on `packages.kd_research.phase_graph.PhaseNode` (dump: `python -m packages.kd_research.workflow_spec` or `/harness`). Do not copy that table here. Design notes: `harness/design_phase_status_and_exemplars.md`. Schema: `harness/schemas/phase_status.schema.json`. Legacy sessions without the file are OK (`check_session` → SKIPPED).

Process rules that are not node fields:

Dependency rules (do not violate — v1 shipped a broken graph):

- Phase 1 agents 2a/2b/2c are genuinely parallel **with Phase 0**. 2d must run **after** 2a and 2b (file gate: financials + filings) — it does **not** wait on 2c or on `1_parallel` complete. **1c runs after 2b** (needs multi-year `data/raw_sec/`; file gate: `sec_filings.json`) and does **not** wait on 2c. Spawn **one year-reader per annual on disk** (isolated window; section-walk the cleaned `.txt` via line-range/search — never paste a full 10-K). Year-readers may run **in parallel with 2d**. After excerpt-in-source passes, **2e is the single merger** of `filing_deep_dive.json` (cross-year scorecard via `promise_vs_actual.py`, transcripts secondary). When `market_context.ownership.complexity` is medium/high (or intensity is high), 2e must deepen related-party / control / dual-class / VIE-relevant notes — not leave silence. Extra annuals are not a substitute for that depth. 1c complete: `preflight --phase 1c --mode complete` (year-files + excerpts + `verify_rechecks`).
- **1d** runs after Phase 0 + 1b (**not** 1c). Workers gather only (no 8-year forecast). FDD is optional on 1d workers. `1d_merge` writes `operating_path_brief.json`. Do not average flatten vs destock.
- **1e** (harness ≥ 3.4.0) runs after Phase 0 + 1b + 1c + 1d. Spawn `story` first (writes `narrative_bind.json`: story, carrier map, evidence_hooks, stage_fit). Then spawn `3p` (writes `narrative_3p.json` only). Lock is `verdict=PASS`. `preflight --phase 1e --mode complete` before Agent 5. Max two FAIL→rewrite loops, then `too_hard`. Agent 5 **does not** write `narrative_bind.json` and **does not** reclassify. `< 3.4.0`: skip 1e; Agent 5 still lock-then-compute.
- Phase 2: Agent 4 (technical) and Agent 12 (TSR) may start after orch + their files (price snapshot / financials) — they do **not** wait on 1d or 1e. Agent 5 needs 1e lock (and therefore 1d + FDD). Agent 4 must not read any fundamental artifact (including `filing_deep_dive.json`, `market_context.json`, `narrative_bind.json`, or `operating_path_brief.json`).
- On ≥ 3.4.0, FDD and operating-path consumption is `narrative_bind.evidence_hooks` (1e; map or reject each finding id). Agent 5 does **not** log `filing_deep_dive_hooks` / `operating_path_hooks`. Agent 5 **must** read `registry/market_context.json` and the region module in `module_file`, and log `market_context_hooks` (use / reject / noted_only). When `registry/street_estimates.json` exists, Agent 5 **must** log `street_bind` + `street_hooks`. On `< 3.4.0`, Agent 5 still logs FDD/oppath hooks (use or reject). Street/Y1, destock, ROIC, and WACC policy: §10c–e (do not restate here). Agent 12 is parallel and is not the ROIC identity. Agent 5 remains the only writer of adopted growth/OM paths. Phase 2.5 must ground legal/contingency and credibility-driven bear weight in the deep dive when present, and include ≥1 region/governance/FX scenario when `market_context.intensity` is `high` (expected when `medium` if material). Agent 7 must cover footnotes, multi-year strategy arc, management scorecard, and **market & institutional context** (one-paragraph no-op OK when intensity is `low`) in non-stub sections.
- Phase 2.5 needs `data/valuation_model.json` (file gate; does not wait on technical/TSR). Charts (phase 3) start after Agent 5’s valuation_model. Reports (phase 4) start after 2.5. Phase 5 (audit) waits on reports, not charts.
- **No always-on region agent** in this graph. Region work is orchestrator judgment + advisory modules + hooks (see §5b).

### Handoff files (every agent)

Every agent — including swarm leads and the audit agent — writes `registry/handoffs/<agent_id>.md` before finishing, with four sections: **What I did**, **Data issues & gaps** (failed/truncated/stale/substituted data, with the fallback used), **Assumptions & deviations** (judgment calls not already recorded with rationale in the artifact), **For downstream agents & the auditor**. The artifact shows *what* was produced; the handoff shows *where it is soft*. The audit agent reads all handoffs as part of its sweep.

### Merge protocol (Phases 0 and 2.5)

When the main agent merges swarm returns: (1) write each verbatim return to `registry/raw/` **before** merging; (2) merge, deduplicating and resolving conflicts in-line; (3) spot-check 3 headline numbers of the merged file against the raw returns or data — a merge must never introduce a new number. The persisted raw returns make the merge auditable. Phase **1c** uses the same rule: persist `fdd_year_*.json`, run excerpt-in-source, then 2e merges (no new numbers; `verify_rechecks` records the re-reads).

### Phase 5 — audit and fix loop

The audit agent (template in `harness/agent_prompts.md`) audits the orchestrator too (merges, classifications — **including market_context / intensity**). It verifies: report numbers match registry/compute outputs; registry headline numbers match the data layer; **at least 5 filing-grade numbers verified against external primary sources** (consistency is not truth); **at least 3 footnote/deep-dive figures re-checked against `data/raw_sec/` primary text**; valuation has documented FDD consumption (`narrative_bind.evidence_hooks` on ≥ 3.4.0, else `filing_deep_dive_hooks`); when `market_context.json` exists, valuation has non-empty `market_context_hooks` and cost-of-capital / accounting / ownership dials are justified (US low-intensity `noted_only` is OK); fundamental report has non-stub footnotes / strategy-arc / management-track-record coverage and market/institutional context appropriate to intensity; every judgment number has a substantive rationale with scripted intermediates; all compute scripts rerun deterministically from cached data; citations exist; no lost findings (every `latest_quarter.json.risks[]` entry maps to risk_bridge or is explicitly dropped); README required-inputs match what agents actually used. It writes `registry/audit.json` with `verdict: PASS|FAIL`. On FAIL, fix the issues (max 2 iterations), re-audit, and record resolutions. After the final audit, update the README's audit-verdict line and list any waived issues. A session is not complete until audit passes or issues are explicitly waived in the README.

### Machine check

`python3 scripts/check_session.py --ticker <T> --date <D> --full` (use `vendor/mcp/yfinance-market-mcp/.venv/bin/python` for full JSON-schema validation) — structural PASS/FAIL/SKIPPED report; exits non-zero on FAIL. Verifies required files, schema validity, non-empty rationales, `compute_script` paths exist, probability sums, confidence-gate consistency, and that `audit.json.verdict == "PASS"`. **`registry/market_context.json` is optional for legacy sessions** (absent → SKIPPED); when present, it is schema-checked and valuation must carry non-empty `market_context_hooks`. **`registry/phase_status.json` is optional for legacy sessions** (absent → SKIPPED); when present, schema/keys + designed phase coverage are checked. Run after Phase 5.

## 9. Sector modules (advisory reference)

Read the module for the classified sector **after** §5 identity, before valuation, from `harness/modules/`: `sector_banking.md`, `sector_insurance.md`, `sector_growth.md`, `sector_reit.md`, `sector_utility.md`, `sector_cyclical.md`. Empty `module_file` is valid for `standard` (ordinary CPG/industrial DCF). They are **KPI, cycle-fact, and stress libraries** — not engine choosers. Engine and playbook come from `harness/modules/valuation_router.md` (stamp `classification.json` on ≥ 3.4.0; `narrative_bind.iv_playbook` on `< 3.4.0`). NAV, AFFO, ARR, TTC×EBIT, and exit multiples in a sector file are the **price** column, not `fair_value.base`. Their numbers are reference ranges, not mandates — justify what you pick (§6). Module “detection” / “automatic classification” / scoring-matrix sections are **diagnostic only** — they do not set `primary_sector`. If they contradict §5 or the router, the router wins on engine; §5 wins on KPI identity.

## 9b. Region modules (advisory reference)

Read the module named in `market_context.module_file` before valuation: `region_us.md`, `region_hk_china.md`, `region_generic.md` (add dedicated modules later as needed). They cover local cost-of-capital framing, accounting-regime peer traps, ownership/control (family, SOE, VIE, dual-class), filings maps, and stress seeds. **Advisory only** — never paste module defaults as WACC, country premiums, or family discounts without a `market_context_hooks` use/reject reason (§5b, §6).

## 10. Latest-quarter evidence & overrides

- Agent 2d extracts the latest quarter per `harness/schemas/latest_quarter.schema.json` and logs notable changes in `evidence_log` (metric, observation, materiality, suggested rule). **2d logs evidence only.**
- The **valuation agent** decides whether evidence changes assumptions and logs each applied change in `valuation_model.json.overrides_applied` (rule, old, new, reason).
- Rules (symmetric, with materiality):
  - **Two-quarter rule**: a key metric moves >5% relative (or >100bp) in the same direction for two consecutive quarters → adjust the assumption that way. Seasonal metrics compare YoY, not QoQ. A raise that coincides with deteriorating FCF and AR/inventory belongs in **bear_only** (or is rejected) — machine WARN on harness ≥ 2.11.0. Destock inverse (harness ≥ 2.12.0 WARN, only when a destock/flatten conflict exists): a raise while FCF is ≥0 and inventory/AR are **down** (WC release) belongs in **bear_only** (or is rejected) — positive FCF is not a clean bill of health.
  - **Guidance-change rule**: company guidance (not analyst targets) materially raised/lowered → update trajectory, widen/narrow range. Analyst **price targets** and Street **FY+1/+2 estimates** are not company guidance — never apply this rule to a consensus revision; bind Street separately (§10c).
  - **Inflection rule**: margin inflection → adjust operating-leverage path.
  - **Capital rule**: major buyback/dividend/capex/raise → update capital structure and cash flows.
  - **New-risk rule**: new material risk → add a stress scenario to Phase 2.5.

## 10b. Filing deep dive (multi-year notes, strategy, credibility)

Phase **1c** is a gather/merge: **N year-readers** write `registry/raw/fdd_year_FY{yyyy}.json` (one annual each; schema `harness/schemas/filing_year_dive.schema.json`); a machine **excerpt-in-source** check; then Agent **2e** is the **single writer** of `registry/filing_deep_dive.json` per `harness/schemas/filing_deep_dive.schema.json` (methodology: `harness/filing_deep_dive.md`). Year-readers must not call `promise_vs_actual.py` or see other years. 2e merges, rehydrates numbers, uses bound `S/data/transcripts/` (fetch only `session_missing` latest-window slots into `S`), and fail-closes on silent ownership at medium/high intensity. Agent 13 still evaluates FDD substance. Required FDD blocks:

1. **Footnotes** — targeted note extractions (revenue disaggregation, segments, SBC unrecognized, debt/leases, contingencies/legal, tax, commitments, related-party/dual-class) with status `extracted|missing|not_applicable|partial` and short excerpts. Prefer code helpers in `packages/kd_research/note_extract.py`. Full note text stays in `data/raw_sec/`; do **not** dump uncapped 10-K prose into `sec_filings.json`.
2. **Strategy arc** — typically **≥3 annual reports** (Item 1 + MD&A priorities): stated priorities by year, continuity score `{value, rationale, basis}`, pivot flags, capital-allocation story, implied model hooks.
3. **Management scorecard** — grade historical company promises (revenue/opex/capex/margins/capital returns/segment paths, plus soft milestones) against actuals. **Filings first** (prior EX-99.1 outlooks, 10-K/10-Q MD&A); **earnings-call transcripts second** (`data/transcripts/`, each scorecard row labeled `source_type`: `filing` | `transcript` | `filing+transcript`). Use `packages/kd_research/promise_vs_actual.py` for numeric join/grades when possible. Qualitative vision promises are `too_early` / narrative_shift — never fake precision. If transcripts are unavailable, declare the gap, set degraded quality, and widen valuation uncertainty.

On ≥ 3.4.0, 1e records `evidence_hooks` for each material FDD finding id (map or reject). On `< 3.4.0`, valuation records `filing_deep_dive_hooks`. Deep dive does **not** auto-set WACC or probabilities — the LLM still judges. Valuation must also record `market_context_hooks` when `market_context.json` exists (intensity `low` may be a single `noted_only`). IR / 8-K CEO dollar quotes (EX-99.1) are **first-class** for AI/segment run-rate; missing transcripts **widen range** and degrade scorecard quality. A printed remaining-period company-box **low** is a **same-period floor** in base (§10c.4); a miss of an unprinted guide belongs in **bear**. That floor is a same-period box rule, not a Street-Y1 statute — Street bind is §10c.

## 10c. Street FY+1 is the default Y1 forecast

**Harness ≥ 3.0.1:** Street FY+1 is the default next-year **level** when Street is usable (`street_baseline`). It is a forecast reference — not intrinsic value, not a price target, and not Gordon \(g\). The 5% identity applies on `street_baseline`. `independent_y1` is legal only with a named gate that this print is not Street's object: `destock_this_print` | `definition_mismatch` | `native_kpi` | `street_unusable` | `story_fail` | `ttc_midcycle` (cycle/commodity: margin × current revenues). `story_fail` requires `narrative_bind.street_restory.will_own=false` (a paragraph is not enough). `keep_independent_vs_street` remains illegal. Destock still **never averaged** with Street. FY+2 Street is a **growth reference**, not a paste. Street **price targets** stay out of the DCF.

This section is **current law** for harness ≥ 3.0.1. Agent 13 loads `harness/law_history.md` when `harness_version < 3.0.1` (3.0.0 independent default; Street default Y1 2.28–2.44; required-Street 2.18–2.27; independent-then-calibrate 2.7–2.17). Live Agent 5 / orchestrator must not load that file.

1. **Agent 2a** fetches vendor FY+1 / FY+2 revenue and EPS into `registry/street_estimates.json` (label company FY vs calendar). Optional EBIT/OI when the vendor has it. Do not invent. Fetch failure → `unavailable` or `data_fetch_log.failed[]`; Agent 5 **widens range**.
2. **Agent 2d** still writes **company** guidance only. Street never enters `latest_quarter.guidance`.
3. **Agent 5** writes `street_bind`: `guide` × `street` × `base` and `delta_pct = (base − street) / street`. `street` must **match** `street_estimates.json` FY+1 unless `response=street_unusable`. Write `y1_construction.rationale` (legacy key `independent_construction` still accepted). Do not average destock with Street into one CAGR called base. Intra-year Street 0q/+1q when present must be consistent with FY+1. FY+2 Street is a **growth reference**, not a mandatory paste.
4. **`response`:**
   - `street_baseline` — **default** on ≥ 3.0.1. You copied Street as the Y1 level. `|delta_pct| > 0.05` is FAIL. `|delta| > 0.03` WARN. `street_hooks[]` must include `used_as:fy1_baseline` (or `used_as:revenue_path` / `street_mean`).
   - `independent_y1` — requires `independence_gate` that **resolves**. `|delta| > 0.20` FAIL without `divergence_rationale` ≥40 chars. Street still must not be all-`noted_only`. `used_as:fy1_baseline` is **not** required.
   - `street_unusable` — existing hatch (`n_revenue` < 5, fetch fail, wrong FY, `unavailable=true`). No 5% identity.
   - `keep_independent_vs_street` remains **illegal**.
5. **Legal `independence_gate` values** (required for `independent_y1` on ≥ 3.0.1 and on 2.28–2.44):
   - `destock_this_print` — `operating_path_brief.analog_class` ∈ {`inventory_channel`, `advertiser_budget`} **and** `current_print_is_destock === true`.
   - `definition_mismatch` — structured pair `vendor_revenue_class` ≠ `filing_revenue_class` (banks especially).
   - `native_kpi` — `sector_config.primary_sector` ∈ {`banking`, `insurance`, `reit`}. Bind the native Street KPI or skip the **revenue** 5% band.
   - `street_unusable` — same hatch as `response`.
   - `story_fail` — narrative bind restory rejects the Street-implied story (`street_restory.will_own=false`). A 40-character paragraph is **not** a substitute on ≥ 3.0.1.
   - `ttc_midcycle` — `primary_sector=cyclical` **or** cyclical overlay: Y1 is cycle-average **margin × current revenues**, not a Street copy of peak/trough reported earnings.
6. **Profit:** if Street EBIT/OI is fetched and response is `street_baseline`, base Y1 EBIT starts there. Else if Street EPS is numeric and `eps_basis` is `gaap` or `non_gaap`, start from EPS × session share count and write an EPS→NI→EBIT bridge. If `eps_basis=unknown` and no Street EBIT, Street EPS is calibration only. Remaining-period **low** of a live unprinted company box is a floor for that **same period** in base (never Q3 vs FY Y1).
7. **Destock analog:** destock-in-base is **legal** only when `destock_this_print`. Destock-in-base remains **FAIL** while `street_baseline` is claimed and this print is **not** destock. Destock analog in **bear** is always legal. Mid-cycle / TTC may license independent Y1 via `ttc_midcycle` (margin × current revenues).
8. **Conservatism stacking:** valuation **must** write `conservatism_dials[]` with keys `volume_vs_guide`, `gaap_om_vs_guide`, `sbc_in_fcff`, `wacc_vs_buildup` (`applies_in` base | bear_only | none). Omitting the array is FAIL. `stacking_justification` when ≥3 apply in base. `volume_vs_guide` **and** `sbc_in_fcff` both in base while Y1 is outside the Street 5% band is FAIL. `wacc_vs_buildup: matches_buildup` does **not** license coupon-as-Kd or trough-only market weights — those are §10e FAILs.
9. **SOTP vs DCF:** when both run, write `multi_method_reconciliation` — omit is FAIL. If `|cross − primary| / primary > 0.40`, reopen the Y1 path or explain why the gap is real. If `data/compute/valuation_result.json` exposes Y1 revenue, `street_bind.base` must match it.

Legacy sessions without `street_estimates.json` → SKIPPED. Stamped 2.7–2.27 machines: `harness/law_history.md`.

## 10d. Owner-earnings ROIC identity (new runtime ≥ 2.8.0)

**Skill, not a formula.** DCF defines value. ROIC decides whether that DCF is a business or a spreadsheet. Agent 5’s compute script must print owner-earnings ROIC on the **same** NOPAT, cash-tax, lease, and WACC stack as the DCF. Agent 12’s historical GAAP ROC screen is a prior, not this identity. Phase 2 stays parallel (4 ∥ 5 ∥ 12).

| Mid-cycle NOPAT / invested capital | What growth does | What “cheap” means |
|---|---|---|
| Above WACC | Friend | Discount to a franchise DCF can be a margin of safety |
| ≈ WACC | Irrelevant | EV should sit near invested capital; equity near book after debt |
| Below WACC | Enemy | Extra capital destroys value; a Gordon `g > 0` with no reinvestment is a wish |

1. **Same script as the DCF.** Numerator: the DCF’s owner-earnings NOPAT (same tax, lease, **SBC sign** as FCFF). Do **not** subtract SBC from after-SBC GAAP OI a second time. Declare `fcff_identity.sbc_convention` (`leave_sbc_in_ebit` | `ir_fcf_nss` | `other`+bridge). Denominator: notes + current LT + LT + equity − cash; consider unfunded pension; do not inflate IC with VA’d DTAs. Leases: `opex_and_out_of_ic` **or** `capitalized_both` — never mix Yahoo lease-grossed debt with opex leases. Print TTC ROIC (history) and mid-cycle ROIC. Hurdle is **in-model WACC**, not a 15% Buffett paste.
2. **Dual column** that must reconcile: **A** residual-claim FCFF (keep) vs **B** `EV = IC + PV of (ROIC − WACC) × IC` on the same NOPAT and WACC. Also print a **g=0 counterfactual** from the same engine (trough years can hide a Gordon plug).
3. **Legal exits when mid-cycle ROIC ≤ WACC** (`quality_bucket` below or ≈, 50 bp check tolerance — not an investment opinion; same class as Street’s 20%/40%): `g_zero` | `cut_earnings_power` | `reinvestment_in_engine` (`FCFF = NOPAT × (1 − g/ROC)`; mismatch=false) | `reconciled_to_ic` (|A−IC|/IC ≤ 8% **and** cheap_claim is `equity_near_book` / `residual_option` / `not_cheap`). The harness **never writes g**. Disclosure in `terminal_consistency` is not a substitute.
4. **`cheap_claim.class`:** `franchise_mos` only when bucket is `above_wacc`. Below/approx → `equity_near_book` | `residual_option` | `not_cheap`. You may not call equity cheap on MoS vs residual-claim DCF alone.
5. **`applies: false`** with `not_applicable_reason` (≥40 chars) + `native_analog` for banking (`roe_vs_ke`), insurance, pre-profit growth (negative IC). Do not invent industrial IC for those names. REIT is after-tax DCF on ≥ 3.1.0 — keep industrial ROIC/WACC objects or a property FCFF analog; **do not** skip because NAV/AFFO is the pricing metric.
6. TTC ROIC < WACC is **printed + Agent 13**, not a machine FAIL (would nuke trough cyclicals). Tires may use mid-cycle FCFF; mines keep advisory `g=0`. `sector_cyclical.md` quality threshold is not a substitute for coding the identity.
7. **Mid-cycle construction (harness ≥ 2.13.0):** when `applies:true`, write `mid_cycle_construction` (`window_kind`, `years_used`, `print_vs_midcycle`). `above_wacc` / `franchise_mos` license only `ttc_cycle` | `multi_year_avg` with a ≥2-year window. `last_year` | `peak_year` | `insufficient_window` never license a franchise. The machine does not recompute NOPAT from the year list.

Check tolerances (not opinions): WACC match 5 bp; mid-cycle ROIC = NOPAT/IC 25 bp; bucket band 50 bp; A vs IC noise 8%. Legacy / missing `harness_version` / harness < 2.8.0 → SKIPPED.

## 10e. WACC-buildup identity (new runtime ≥ 2.40.0)

**Ingredients, not a pasted rate.** `wacc_vs_buildup: matches_buildup` is required and is **not** a quality badge when Kd is a coupon or weights are the trough tape. Agent 5 still judges Rf, beta, ERP, spread, and target weights. The machine fails impossible ingredients. There is **no** shared WACC calculator and **no** mandated WACC/ERP/Kd number.

Write `valuation_model.wacc_buildup` on the same compute script as the DCF. `applies:false` with `not_applicable_reason` ≥40 chars + `native_analog` for banking (`roe_vs_ke`), insurance — copy §10d.5; do not invent an industrial WACC to satisfy the object. REIT / `real_estate` on ≥ 3.1.0 **keeps** WACC (after-tax DCF). NAV/AFFO is `pricing`, not a WACC skip.

When `applies:true`:

1. **Kd is a market claim.** `kd_source` is `current_yield` or `rf_plus_spread` only. Coupon / stated coupon buckets are a cross-check, **illegal as the WACC input**.
2. **Kd vs Rf.** Pretax Kd ≥ session Rf (the Rf inside Ke). Only hatch: `kd_below_rf_gate=negative_rate_market` with `kd_below_rf_rationale` ≥40 chars and **local** Rf evidence. Do not use a “quoted YTM” hatch to pass coupon-below-Rf.
3. **Spread.** `rf_plus_spread` stores `spread_bp`. Spread < 25 bp FAILs unless `kd_spread_hatch` is `gov_or_aaa` | `quoted_ytm_equals_rf` | `negative_rate_market`. Zero spread is not a silent default.
4. **Weights.** `weight_policy` is `current_market` | `target` | `blended`. `we+wd≈1`. Distressed-equity tripwire: `wd > 0.35` **and** implied-WACC gap > 200 bp → cannot use **only** `current_market`. Store `current_market_wd`. If `|wd − current_market_wd| < 2 pp` while the tripwire is on, FAIL unless `structural_leverage_hatch` ≥40 chars with a **non-price** basis (mgmt target, rating agency, indenture, peer book). Do not trip on `wd > 0.35` alone. Do not require equity ≤ book.
5. **Skip when net-cash.** If `wd < 0.05`, skip Kd-vs-Rf and the spread floor (dummy Kd on a cash pile is not a FAIL).
6. **Arithmetic.** WACC = `we×Ke + wd×Kd(1−t)` within 5 bp; `kd_aftertax = kd_pretax×(1−t)` within 5 bp; match `assumptions.wacc` and `roic_identity.wacc` (5 bp).
7. **Implied gap.** If reverse-engineering exists and `wd > 0.35`, an implied WACC must be present (do not omit the inversion to keep trough weights). Gap > 200 bp requires `wacc_gap_rationale` ≥40 chars that names Kd or weights — not only “tape is cheap” / `franchise_mos`. Do **not** FAIL the tape for disagreeing. Do **not** set model WACC to implied WACC (that is a silent pad). Do **not** auto-reclassify `cheap_claim` from the tape. Named Ke sleeves (ops / size / governance) live **inside Ke** with use/reject; dual-class may be 0; a silent add-on after mixing with cheap debt remains illegal.

Check tolerances: 5 bp on WACC identities; 1 pp on `we+wd`; 2 pp on target-vs-current wd copy; 25 bp on stored vs computed implied gap. Legacy / missing `harness_version` / harness < 2.40.0 → SKIPPED when the object is absent.

## 10f. Shock surface and stress book (new runtime ≥ 2.44.0)

**Map vs book.** Agent 5’s compute script is the only FV engine. Phase 2.5 workers propose shocks; they do not write `valuation_model.json` and they do not guess `fair_value_haircut_pct`. Five script *calls* are not five models.

1. Write `valuation_model.shock_surface.dials`: each native dial has **current `value`** and optional `lo`/`hi` for reverse-stress. Overrides **replace** those values (not deltas). The 4×4 sensitivity grid is display, not the stress engine.
2. The script defines `fair_value_under(overrides) → float` and accepts `--under '{...}'` printing `{"fair_value": <float>}` without rewriting `valuation_result.json`. `fair_value_under({})` equals `fair_value.base` (machine-checked).
3. Merge **shocks first** into `risk_bridge.json` (no guessed haircuts). Then run `python -m packages.kd_research.stress_apply --ticker T --date D`. Apply walks the merged scenario list and writes one `applied` block per row. Raw `stress_*.json` files are the gather archive, not a second FV source. Unknown shock keys FAIL that row. Bind refuses an unapplied bridge (no `size_cap=1` default).
4. `stress_test.reverse_stress` is a one-factor `fair_value_under` walk (`none: true` with a reason is legal). Not a 4×4 cell.
5. 5b writes `decision.stress_bind` from `compute_stress_bind` only (§8). Reports copy `format_stress_card` under heading `## Unstressed vs stressed`. ATR is not book size.

Keep ≥5 scenarios. Kill-path quality is extra gates (`restates_bear`, liquidity path, reverse-stress), not a smaller swarm.

## 10g. Tier-1 asset/buyer/option, life-cycle, market-neutral (≥ 3.3.0)

The router (`harness/modules/valuation_router.md`) adds a **buyer** question and two primary ids (`contingent_claim`, `asset_based`); Agent 5 **opens the ref recipe** the router names for the chosen playbook and each overlay. Machine gates: `packages.kd_research.damodaran_gates` (`TIER1_SINCE` 3.3.0). All of the below SKIP below 3.3.0 so stamped history stays green.

1. **Life cycle + stage fit.** `narrative_bind.life_cycle_stage` ∈ `idea|young_growth|scaling_growth|mature|decline|not_applicable`; `who_leads` ∈ `story|numbers`; `stage_fit` (≥40 chars) explains the fit. A wrong-stage story is a fail, not a variant.
2. **Buyer.** `narrative_bind.buyer.class` + rationale. A private/undiversified buyer needs `total_beta=true` and numeric `illiquidity_discount > 0`; a diversified public buyer must state numeric `illiquidity_discount = 0`; `vc_pe` needs `ke_stepdown` (≥20 chars).
3. **Market contest + hostile review.** `narrative_bind.market_contest` has non-empty `accept[]` and `contest[]` (+ rationale); contest names company cash flows / margins. Presume the market right until model then inputs survive attack.
4. **Options.** `contingent_claim` / `real_options` need `option_screens` (`exclusivity`, `materiality`, `no_double_count` all true). A `distressed_call` **replaces** DCF equity (option model), never adds on top.
5. **Truncation answered.** Every model carries a `truncation` block: `p=0` + `why_not_material` (≥40 chars), or `p>0` with the weighted base.
6. **Market-neutral inputs.** `wacc_buildup.erp_method` (implied default; `not_applicable` illegal while `applies=true`; historical needs `erp_reject_implied_reason`), `beta_method` (bottom_up default; `not_applicable` illegal while `applies=true`; otherwise `beta_reason`), and `discount_currency` = `cash_flow_currency` (or `fx_policy`).
7. **Per-share bridge.** `per_share_bridge` (`shares_used` > 0, `net_debt_subtracted`, `cash_added`, `rationale`) or `applies:false` + reason. Financials and option primaries are exempt.

Legacy / missing `harness_version` / harness < 2.44.0 → SKIPPED. Sessions 2.29.0–2.43.x keep the 25/15 duration cliff (`harness/law_history.md`).

## 11. Analytical perspectives

Reports must address five lenses — and each lens must be **fed by data**, not asserted:

- **Value**: margin of safety (1 − price/FV, signed), normalized earnings, capital-allocation assessment, balance-sheet floor (footnote debt/leases when available).
- **Growth**: TAM/SAM/SOM with sources, organic vs M&A split, concentration, reinvestment runway (from Phase 0/1 data **and** strategy_arc).
- **Contrarian/catalyst**: catalyst calendar, analyst dispersion, short interest, insider activity (from `news_sentiment.json`); why is it cheap; management credibility pattern from scorecard.
- **Risk**: stress scenarios with probabilities + rationale, liquidity/contingents (footnote contingencies / Item 3 before web legal $), concentration, covenants/refinancing, **Unstressed vs stressed** card (`size_cap`, expected loss, kill/monitor); region/governance/FX when `market_context.intensity` warrants it.
- **Technical/timing**: entry/stop/targets, ATR-based sizing, relative strength vs regional benchmark and sector index — computed independently of fundamentals (Agents 4 and 8 never read fundamental artifacts).

Document cross-lens contradictions explicitly in the fundamental report ("Perspective conflicts"). The fundamental report must also include non-stub subsections on **footnote findings**, **multi-year strategy alignment**, **management track record** fed by `filing_deep_dive.json`, and **market & institutional context** fed by `market_context.json` (one-paragraph no-op OK when intensity is `low`).

## 12. Fallbacks & escalation

- Missing/partial data → document the gap, use the closest proxy with rationale, **widen** the valuation range.
- Sector confidence < 0.70 → `requires_manual_review` + widen range or `too_hard` (do **not** shrug to ordinary DCF / `primary_sector=standard`).
- Market-context confidence < 0.70 or intensity `high` with thin local filings → `requires_manual_review` + **widen** the valuation range (do not fake a US no-op).
- Conflicting lenses → do not force one verdict; present bull/base/bear and state which perspective dominates under which assumption.
- Pre-revenue/binary companies → milestone-based scenarios per `sector_growth.md`.
- A tool/API failure → record it in the artifact, use the fallback source (§4), flag degraded quality in the README.
- **Unknown ticker** → `verify_ticker.py` **aborts** (no scaffold) when Yahoo has no quote **and** no search listings. If listings exist, scaffold the typed ticker (`quote_symbol` null). The orchestrator confirms the listing with tools, stamps `quote_symbol`, and must pass `verify_listing.py`. Fail → abandon and STOP. Do not invent a company. Do not keep a per-ticker Yahoo map.
- **`spawn_subagent` failure / unavailable** → **abandon** (`record_spawn.py --event fail` or `abandon_session.py`). Do **not** author specialist artifacts as the orchestrator. Scaffold a new `session_key` if the user still wants the ticker researched.

## 13. Quality gates

**Current machine gates only.** Version-banded Street/destock/graph history is `harness/law_history.md` (Agent 13 when `harness_version < 3.0.1`). Python still SKIPPED-gates older stamps; live operators do not need those rows. Damodaran identities (`narrative_bind`, bank engine, growth triad, truncation-writes-base): `packages.kd_research.damodaran_gates` on ≥ 3.0.0. Harness ≥ 3.1.0 also: required `iv_playbook`, required `terminal_consistency` (Gordon/liquidation/excess_return), REIT WACC, price-as-value ban. Harness ≥ 3.2.0 also: narrative substance (`story.paragraph` + `map` + non-empty `3p`), `truncation` with `p>0` writes the weighted base, closed `pricing.used_as` roles, and a FAIL (not SKIP) when a v3 session has a `valuation_model` but no parseable `harness_version`. Harness ≥ 3.4.0 also: `classification.json` at orch; phase 1e story+3P lock; map keys are story carriers; Agent 5 cannot reclassify; `story_input_bind` maps carriers onto the model.

**Process principle:** spawn-or-abandon is §8 item 7 + `orchestrator_runbook.md`. Valuation stays **single-writer** (Agent 5). Parallel fan-out is for independent gather, not multi-valuer. Machine FAILs: `packages.kd_research.check_catalog` (when-tags). Investment policy (Street/Y1, ROIC, WACC, destock) is §10c–e, not this table.

| Gate | Enforced by |
|---|---|
| Required artifacts exist, parse, validate against `harness/schemas/*.schema.json`, have non-empty rationales | `[machine]` check_session.py |
| `compute_script` paths exist; ticker/date match folder; confidence-gate consistency | `[machine]` check_session.py |
| scenario_probabilities sums to 1.0; ≥5 stress scenarios | `[machine]` check_session.py |
| audit verdict is PASS | `[machine]` check_session.py |
| When `filing_deep_dive.json` + valuation exist: ≥ 3.4.0 `narrative_bind.evidence_hooks` per finding id; `< 3.4.0` non-empty `filing_deep_dive_hooks[]` (F8) | `[machine]` `check_1e_complete` / `check_session` + preflight `1e` complete or `2_parallel` complete |
| New-runtime `operating_path_brief.json`: 3 worker raws + `verify_rechecks` ≥3; ≥ 3.4.0 1e `oppath.*` evidence_hooks; `< 3.4.0` valuation `operating_path_hooks` not all-`noted_only`. Absent on legacy → SKIPPED | `[machine]` 1d `--mode complete` + `1e` complete / `check_session --full` |
| Street/Y1 bind when `street_estimates.json` exists (policy §10c) | `[machine]` `check_catalog` |
| `roic_identity` when valuation exists (policy §10d) | `[machine]` `check_catalog` |
| `wacc_buildup` when valuation exists (policy §10e) | `[machine]` `check_catalog` |
| `explicit_forecast` when valuation exists (harness ≥ 2.43.0): year-by-year path copied from the compute script, or `applies:false` + `not_applicable_reason` + `native_analog` when the model is not a path. Fundamental report restates Y1 + a later year in a markdown table | `[machine]` `check_catalog` |
| Template masses `30/45/25` or `25/50/25` need `probability_method` **and** a numeric counterfactual; `priced_for_perfection` must name a dial (not price≷base/PW); `(bull−bear)/base > 100%` or `bear < 0.4×base` requires `decision_usefulness`; Agent 12 `roc_vs_cost_of_capital=fail` cannot sit with `cheap_claim=franchise_mos` unless `quality_bucket=above_wacc`; branded staple + `primary_sector=cyclical` without spot evidence FAIL (F21); branded consumer/CPG/staples cannot use `primary_sector=growth` | `[machine]` `check_session --full` + `2_parallel` complete |
| Outcomes `overall_label` uses `horizon_primary` only (default 3m); 1d/1w MoS-sign is tape hygiene. `fv_band_at_mark=inside` ineligible when span >100%. Catalog comparable rankings exclude null `fv_base`. Calibration/portfolio must not default to audit PASS as a buy list | `[machine]` outcomes scorer + catalog_api |
| `registry/decision.json` duration.action including `pass`/`too_hard`; `initiate`/`add` illegal when `decision_usefulness=low` or wide cone; technical `side=pass` legal (no forced long). Duration pass + TA long is legal (isolated specialists). README must quote `duration.action` (token, or product English `duration_label` on harness ≥ 2.43.0). Catalog projects `decision_action` + risk-bridge `monitoring_trigger`s | `[machine]` `check_session --full` |
| TV share >60% with Y8 growth ≥8% requires extend/switch; related-party ≥20% cannot stay intensity=low; `research_brief.mode=update` requires facts-only earning_power_changelog (no prior FV/MoS/WACC). Street/destock Y1: §10c (history: `law_history.md`) | `[machine]` `check_session --full` |
| `roic_identity.applies:true` requires `mid_cycle_construction`; `above_wacc` / `franchise_mos` need a ≥2-year ttc_cycle\|multi_year_avg window (last_year/peak never license). TTC &lt; WACC remains non-FAIL | `[machine]` `check_session --full` |
| After `risk_bridge.json` exists, `decision.reopened_after_stress` must be true; if `tsr_validation.json` exists `tsr_seen` must be true. Gate is `4_parallel` entry / `--full`, not `2_parallel` complete. Agent 5 stays single-writer | `[machine]` `check_session --full` + `4_parallel` preflight |
| `latest_quarter.cash_quality` requires ≥1 numeric (fcf/cfo/ni/dso/dio/inventory). Missing LQ → SKIPPED | `[machine]` `check_session --full` + `1d`/`2_parallel` entry |
| README must quote duration.action (token, or product English `duration_label` on harness ≥ 2.43.0) before fair value vs price / margin of safety | `[machine]` `check_session --full` + `4_parallel` complete |
| Confidence <0.70 still requires manual review but does **not** force `primary_sector=standard`; growth module has no canned decay/TAM-penetration path | `[machine]` `check_session` identity gate |
| Street/Y1 + destock (do not restate §10c here) | `[machine]` `check_catalog` |
| After `risk_bridge.json` exists, `decision.stress_bind` is required. On ≥ 2.44.0 the object is `compute_stress_bind` (shocked-path FV, expected loss, `size_cap`). `size_cap=0` forbids initiate/add/hold. `restates_bear` cannot bind. Reports heading `## Unstressed vs stressed`. No DCF rewrite. No override hatch. 2.29–2.43 keep the 25/15 cliff | `[machine]` `check_session --full` + `4_parallel` preflight |
| Bind library before sector classify; Phase 0 default 3 rounds (4 if deep/medium/high); `1_parallel` does not wait on Phase 0; 1d still does. Phase 0 complete needs ≥3 (or ≥4) raws | `[machine]` `preflight` + `check_session --full` |
| Extracted FDD material notes (SBC/legal/RP/debt or scorecard) need use-or-reject hooks; 2d consensus beat/miss cites `street_estimates.json`; 1d_ind has `background_round_ids` or `named_gaps`; legal $ in 2.5 cites FDD or unknown | `[machine]` `check_session --full` |
| Phase 2 stays `4 ∥ 5 ∥ 12`. Agent 5 must not wait for TSR. `franchise_mos` + `above_wacc` + Agent 12 `roc=fail` requires `decision.roc_screen_rebuttal` ≥40 chars (FAIL, not WARN). Agent 4 must not cite `tsr_validation` | `[machine]` `check_session --full` |
| `library_bind.json` at 1_parallel **entry** (orchestrator `bind_library.py` before classify); on-disk `filing_index.json` or `ir_listing.json` + `data_fetch_log.freshness` at 1_parallel complete; `data_fetch_log.transcript_freshness` at 1c complete. FDD/year-dives/valuation citing live library paths FAIL `--full` | `[machine]` `check_session --full` + `1_parallel` / `1c` preflight |
| Agent 4 isolation: `technical.json` + `handoffs/4*` must not cite fundamental paths (FDD, valuation, background, latest_quarter, market_context, classification, narrative_bind, sec_filings, sp_financials, street_estimates, library_bind, archive/library) | `[machine]` WARN default / FAIL `--full` |
| Handoffs ≥300B for specialists **and** swarm leads (`phase0_*`, `phase25_*` aliases); four section headers | `[machine]` size FAIL `--full`; headers **WARN** |
| `phase_status` complete ⇒ primary artifacts on disk; pending/in_progress with artifact on disk → lag | `[machine]` FAIL complete-without-artifact; **WARN** lag |
| Reports non-stub; report numbers match registry AND data layer; ≥5 filing-grade numbers verified externally; rationales substantive with scripted intermediates; scripts rerun deterministically; no lost findings | `[audit]` Phase 5 agent |
| `filing_deep_dive.json` structure (footnotes + strategy_arc + scorecard); hook *consumption quality* / report sections | `[machine]` structure + `[audit]` substance |
| New-runtime `registry/raw/fdd_year_*.json`: required sections walked, non-empty `key_figures`, excerpt-in-source; FDD `verify_rechecks` ≥3; `years_covered` matches year-files. Absent on legacy/slim → SKIPPED | `[machine]` 1c `--mode complete` + `check_session --full` |
| `market_context.json` when present: schema + rationale; valuation `market_context_hooks` non-empty; medium/high intensity not all-`noted_only`; absent → SKIPPED (legacy) | `[machine]` + `[audit]` |
| `phase_status.json` when present: schema + designed phase coverage; absent → SKIPPED (legacy); new sessions scaffold it | `[machine]` |
| `research_brief.json` when present: schema + depth + ≥3 questions; absent → SKIPPED (legacy); new sessions write before Phase 0 | `[machine]` + `[audit]` |
| Phase entry/complete preflight (`preflight_phase.py`); orchestrator MUST use before 2/2.5/4/5 and before marking 0/1_parallel/1c/2_parallel/2.5 complete | `[human]`/`[orchestrator]` (script exists; not auto-CI) |
| Decision-grade returns: Phase 0 `downstream_relevance`; handoffs with downstream actions; no filing dumps in swarm JSON | `[audit]` + merge preflight (raw counts) |
| ≥3 footnote/deep-dive figures verified against `data/raw_sec/`; multi-year annual text retained under session tree | `[audit]` Phase 5 agent |
| Sector module read and model choice justified | `[audit]` Phase 5 agent |
| Region module read when market_context present; CoC/accounting/ownership dials justified (no silent regional haircuts); intensity gate respected | `[audit]` Phase 5 agent |
| Reverse-engineering done; priced-for-perfection explicitly flagged true/false with rationale | `[audit]` Phase 5 agent |
| SBC/dilution at critical intensity for growth / is_also_growth | `[audit]` Phase 5 agent |
| No fabricated numbers: every number sourced or justified | `[audit]` Phase 5 agent |
| New-run ticker must exist on Yahoo (`verify_ticker.py`; default on `scaffold_session.py`). Quote **or** search listings → scaffold typed ticker with `quote_symbol` null; orchestrator stamps listing then `verify_listing.py`; no quote and no listings → abort. `--skip-ticker-check` tests/offline only | `[machine]` `scripts/verify_ticker.py` + `scripts/verify_listing.py` + scaffold |
| Every designed specialist (each 1c year-reader; each Phase 0 / 2.5 raw) must have a **launch-then-return** `registry/spawns.json` row before artifacts / phase complete; `execution=orchestrator_inline` on a specialist FAILs; `orchestrator_lead` is orch-row only (do not retag Agent 5 at 5b). Spawn `--event fail` → `registry/abandon.json` (terminal). Finalize and later-phase preflight refuse | `[machine]` `record_spawn.py` + `check_session` + preflight + `finalize_session` |
| Subagent Task-API cryptographic spawn proof / token counts | **Not available** (ledger is process telemetry the orchestrator must write around `spawn_subagent`; faking it is a harness violation) |
| Manual-review flag acted on when confidence < 0.70 | `[human]` |

## 14. Quick start

```bash
# one-shot
kimi -p "Run the JPM research swarm for $(date +%F) in /workspace-stock-research"

# evidence gates (orchestrator)
python3 scripts/preflight_phase.py --ticker JPM --date $(date +%F) --phase 2_parallel
python3 scripts/check_session.py --ticker JPM --date $(date +%F) --full --write-acceptance
```

The **orchestrator** (lead): scaffolds the session (§2, including `registry/phase_status.json`), stamps listing + binds library, classifies the sector (§5) and market/region context (§5b), writes `registry/research_brief.json`, then executes Phases 0–5 **in graph order** (Phase 0 ∥ 1_parallel; 1d waits on Phase 0 + 1b; Agent 4/12 skip 1d), spawning only the **subagents** for the current phase (templates in `harness/agent_prompts.md`). **MUST** call `scripts/record_spawn.py --event launch` then `spawn_subagent`; `--event return` after return. If spawn fails: `--event fail` (writes `abandon.json`) and **stop**. Update `phase_status` after each subagent return. **MUST** run `preflight_phase.py --phase …` (and `--subagent …` when spawning a specialist) before entering a phase — FAIL means do not spawn. Finish with `check_session.py --full` (optionally `--write-acceptance`) then `finalize_session.py` (copies scaffold stamps). See `harness/HARNESS_MAP.md`.
